# TimeClock

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
timeclock/: __init__.py  __main__.py  bot.py  components.py  config.py  constants.py  db_model.py  log.py  query.py  utils.py
timeclock/cache/: __init__.py  guilds.py  members.py
timeclock/cogs/: admin.py  help.py  listener.py  tasks.py  timeclock.py
timeclock/components/: __init__.py  buttons.py  default.py  modal.py  views.py
timeclock/database/: __init__.py  data.sqlite3  guild.py  member.py  role.py  time.py
