[tool.poetry]
name = "timeclock"
version = "0.1.0"
description = "A simple timeclock for Discord"
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.6.0"
aiosqlite = "^0.17.0"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^2.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
